--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.5",
+    "@tailwindcss/vite": "^4.0.14",
+    "@vueuse/core": "^13.0.0",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
