--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@fontsource/manrope": "^5.2.5",
+    "@headlessui/vue": "^0.0.0-insiders.0a8de01",
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "@vueuse/core": "^13.0.0",
     "pinia": "^3.0.1",
