--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@fontsource/manrope": "^5.2.5",
+    "@fontsource-variable/manrope": "^5.2.5",
     "@headlessui/vue": "^0.0.0-insiders.0a8de01",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
@@ -28,7 +28,8 @@
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
