--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^0.0.0-insiders.0a8de01",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.0.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
