--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "@fontsource-variable/manrope": "^5.2.5",
-    "@headlessui/vue": "^0.0.0-insiders.0a8de01",
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.14",
+    "@tailwindcss/vite": "^4.1.3",
     "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.0.0",
     "pinia": "^3.0.1",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@eslint/js": "^9.24.0",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.24.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "vite": "^6.2.1",
+    "vite": "^6.2.5",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
