--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.0.0",
+    "@vueuse/math": "^13.1.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
